--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -7,7 +7,7 @@
 
 <body>
 
-    <script>
+    <!-- <script>
         var config = {
             type: Phaser.AUTO,
             width: 800,
@@ -53,8 +53,12 @@
 
             emitter.startFollow(logo);
         }
-    </script>
+    </script> -->
+
+    <script src="./js/index.js"></script>
+    <!-- <script src="./js/test.js"></script> -->
+
 
 </body>
 
-</html> -->
+</html>
