--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         }
     </script> -->
 
-    <script src="./js/index.js"></script>
+    <script type="module" src="./js/index.js"></script>
     <!-- <script src="./js/test.js"></script> -->
 
 
