--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
     </script> -->
 
     <script type="module" src="./js/index.js"></script>
+    <!-- <script type="module" src="./js/EventsCenter.js"></script> -->
+
     <!-- <script src="./js/test.js"></script> -->
 
 
