--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         }
     </script> -->
 
-    <!-- <script type="module" src="./js/index.js"></script> -->
-    <script type="module" src="./js/index-test.js"></script>
+    <script type="module" src="./js/index.js"></script>
+    <!-- <script type="module" src="./js/index-test.js"></script> -->
 
     <!-- <script type="module" src="./js/EventsCenter.js"></script> -->
 
