--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <!-- <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script> -->
     <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
-    <link rel="stylesheet" href="./css/style.css">
+    <!-- <link rel="stylesheet" href="./css/style.css"> -->
     <style>
         body {
             padding: 0;
@@ -22,14 +22,7 @@
 
     <div id="phaser-example"></div>
 
-    <!-- <script type="module" src="./js/main.js"></script> -->
-
     <script type="module" src="./js/index.js"></script>
-    <!-- <script type="module" src="./js/index-test.js"></script> -->
-
-    <!-- <script type="module" src="./js/EventsCenter.js"></script> -->
-
-    <!-- <script src="./js/test.js"></script> -->
 
 
 </body>
